Allow building with Java 9.
- Must suppress deprecation warning for unit tests because
  LogRecord.setInstant() is new for Java 9.